Fixed style on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -11,15 +11,14 @@ body {
     margin-right: 5%;
     background: #fdf6e3;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 @media (min-width: 1024px) {
     body {
         margin-top: 4em;
-        margin-left: 20%;
-        margin-right: 20%;
-        font-size: 16px;
+        margin-left: 15%;
+        margin-right: 15%;
     }
 }
 
